--- a/style.css
+++ b/style.css
@@ -8,29 +8,47 @@ body {
 }
 
 h1 {
-  color: #333;
+  color: #333333;
   font-size: 32px;
   margin-bottom: 20px;
 }
 
 
 p {
-  color: #666;
-  font-size: 18px;
-  margin-bottom: 40px;
+  color: #666666;
+  font-size: 12px;
+  margin-bottom: 10px;
 }
 
-/* Button Styles */
+ul {
+  list-style-type: none; /* Remove default bullet points */
+  padding: 0;
+  margin: 0;
+  width: 45%; /* Adjust width to be side by side */
+}
+
+li {
+  font-size: 12px;
+  color: #444444;
+  margin-bottom: 10px;
+}
+
+h2 {
+  font-size: 16px;
+  color: #333333;
+}
+
+
 .button {
   display: inline-block;
-  padding: 15px 30px;
-  font-size: 18px;
+  padding: 15px 15px;
+  font-size: 12px;
   margin: 10px;
   border: none;
   cursor: pointer;
-  background-color: #007BFF; /* A fresh blue */
+  background-color: #007BFF; 
   color: white;
-  border-radius: 5px; /* Rounded corners */
+  border-radius: 5px;
   transition: background-color 0.3s, transform 0.2s;
 }
 
@@ -51,29 +69,11 @@ p {
   color: #007BFF; /* Blue text color for status */
 }
 
-/* Simple Layout for the Lists */
+
 .sensor-container {
   display: flex;
   justify-content: space-between; /* Place items side by side */
   margin-top: 40px;
-}
-
-ul {
-  list-style-type: none; /* Remove default bullet points */
-  padding: 0;
-  margin: 0;
-  width: 45%; /* Adjust width to be side by side */
-}
-
-li {
-  font-size: 18px;
-  color: #444;
-  margin-bottom: 10px;
-}
-
-h2 {
-  font-size: 16px;
-  color: #333;
 }
 
 /* Small Screen Adjustments */
